# Advanced-Mechatronics-Projects

./: .gitignore  CMakeLists.txt  README.md  test.html
Homework/: CMakeLists.txt
Homework/Homework 11/: zero_camera.py
Homework/Homework 12/: CMakeLists.txt
Homework/Homework 12/rc_servo/: CMakeLists.txt  rc_servo.c
Homework/Homework 13/: CMakeLists.txt
Homework/Homework 13/imu_mouse/: CMakeLists.txt  main.c  mpu6050.c  mpu6050.h  mpu6050_info.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
Homework/Homework 14/.ipynb_checkpoints/: dsp-checkpoint.ipynb
Homework/Homework 14/dsp/.ipynb_checkpoints/: dsp-checkpoint.ipynb
Homework/Homework 14/dsp/data/: low_pass_sinc.json
Homework/Homework 16/: CMakeLists.txt
Homework/Homework 16/motor_control/: CMakeLists.txt
Homework/Homework 2/: CMakeLists.txt  blink.c  blinky.c
Homework/Homework 2/blink/: CMakeLists.txt  blink.c
Homework/Homework 3/print/: CMakeLists.txt  print.c
Homework/Homework 4/: CMakeLists.txt
Homework/Homework 4/spi_dac/: CMakeLists.txt  spi_dac.c
Homework/Homework 5/: CMakeLists.txt
Homework/Homework 5/i2c/: CMakeLists.txt  i2c.c
Homework/Homework 6/: CMakeLists.txt
Homework/Homework 6/i2c_oled/: CMakeLists.txt  i2c_oled.c  ssd1306.c
Homework/Homework 7/: CMakeLists.txt
Homework/Homework 7/uart/: CMakeLists.txt  uart.c
Homework/Homework 8/: pi_zero.py
Homework/Homework 9/: CMakeLists.txt
Homework/Homework 9/Pi Zero/: uart_echo.py
Homework/Homework 9/pico_to_zero/: CMakeLists.txt  pico_to_zero.c
Homework/Tech Cup/: CMakeLists.txt
Homework/Tech Cup/sky_walker/: CMakeLists.txt  i2c_oled.c  i2c_oled.h  main.c  motor_control.c  motor_control.h  pico_info.h  pid_control.c  pid_control.h  wheel_encoder.c  wheel_encoder.h  zero_listener.c  zero_listener.h
Homework/Tech Cup/sky_walker/pi_zero/: arducam.py  main.py  pi_zero_camera.py  pic_visualizer.ipynb  zero_to_pico.py
